# notes

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml
.obsidian/: workspace.json
C++/: index.html
C++/C++ Primer/: index.html
C++/Effective C++/: index.html
C++/Effective Modern C++/第1章 类型推导/: index.html
C++/Effective Modern C++/第2章 auto/: index.html
C++/Effective Modern C++/第3章 移步现代C++/: index.html
C++/Effective Modern C++/第4章 智能指针/: index.html
C++/Effective Modern C++/第5章 右值引用，移动语义，完美转发/: index.html
C++/Effective Modern C++/第6章 Lambda表达式/: index.html
C++/Effective Modern C++/第7章 并发API/: index.html
C++/Effective STL/: index.html
C++/More Effective C++/: index.html
C++/STL源码剖析/: index.html
C++/The Definitive C++ Book Guide and List/: index.html
code/: .gitignore  CMakeLists.txt
cpp/: index.html
cpp/C++ Primer/: index.html
cpp/Effective C++/: index.html
cpp/Effective STL/: index.html
cpp/More Effective C++/: index.html
cpp/STL源码剖析/: index.html
cpp/The Definitive C++ Book Guide and List/: index.html
docs/: git.md  index.md
docs/C++/: README.md  The Definitive C++ Book Guide and List.md
docs/cpp/: The Definitive C++ Book Guide and List.md
docs/multimedia/: 视频编码基础-I帧、P帧、B帧、GOP、IDR 和PTS, DTS之间的关系.md
docs/openharmony/: camera_framework.md  develop_prepare.md
docs/工具/构建系统/: gn.md
git/: index.html
multimedia/视频编码基础-I帧、P帧、B帧、GOP、IDR 和PTS, DTS之间的关系/: index.html
openharmony/camera_framework/: index.html
openharmony/develop_prepare/: index.html
search/: search_index.json
(+160 files in other folders)
